--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,8 @@ jobs:
           mkdir -p dist_dmg
           hdiutil detach /Volumes/TemporalDenoiser || true
           create-dmg \
+          --overwrite \
+          --skip-jenkins \
           --volname "TemporalDenoiser" \
           --window-size 500 300 \
           --icon-size 100 \
