--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: TemporalDenoiser.dmg
-          path: dist_dmg/TemporalDenoiser.dmg
+          path: dist_dmg/*.dmg
