--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Build app with py2app
         run: |
-          python setup.py py2app --skip-jenkins
+          python setup.py py2app
 
       - name: Cleanup unwanted packages
         run: |
